syntax = "proto3";
package chat; 

option go_package = "models";
option java_package = "com.example.grpc-chat.models";

message Message{
    string Sender = 1;
    string Body = 2;  
    string Reciever = 3;
    int64 Sent = 4;
}

message Success{
    bool Value = 1;
}

message LoginRequest{
    string Username = 1; 
    string password = 2;
    bool active = 3;
}

service ChatService{
    rpc Login(LoginRequest) returns (stream Message);
    rpc SendChat(Message) returns (Success); 
}